myteo/test/analyze/name_resolution/duplicate_function_params_error.exp
ERROR: test/analyze/name_resolution/duplicate_function_params_error.myte:4:18 Name "a" already bound in parameters of function "test1"
 4 | fun test1(a: int, a: int) {}
   |                   ^

ERROR: test/analyze/name_resolution/duplicate_function_params_error.myte:7:26 Name "a" already bound in parameters of function "test2"
 7 | fun test2(a: int, b: int, a: string) {}
   |                           ^